# django-sql-middleware-package

./: README.md  pyproject.toml  pytest.ini  requirements.txt  userful_commands.txt
.github/workflows/: release.yml
sql-package/: README.rst  pyproject.toml
sql-package/d33ps3curity-sql-tools/: middleware.py
sql-package/tests/: settings.py  test_new.py
sql-package/tests/demo_app/: views.py
sqlmiddleware/: asgi.py  settings.py  urls.py  wsgi.py
sqlquery/: factory.py  middleware.py  views.py
sqlquery/migrations/: 0001_initial.py
tests/demo_app/: urls.py
